--- a/css/style.css
+++ b/css/style.css
@@ -14478,7 +14478,7 @@ line-height: 24px;
 /* Terms and Conditions 
  ======================= */
 .termConditionsBanner {
-  background: url(../images/term-conditions/term-conditions-banner.png) no-repeat center;
+  background: url(../images/term-conditions/term-conditions-banner.jpg) no-repeat center;
   width: 100%;
   height: 200px;
   background-size: cover;
