--- a/css/style.css
+++ b/css/style.css
@@ -11825,7 +11825,7 @@ a.PaymentButton.PaymentButton--dark.PaymentButton--rzpTheme.PaymentButton--rzp-d
 .slide-content .description {
   font-size: 18px;
   font-weight: 400;
-  color: #fff;
+  color: #222;
   margin-bottom: 35px;
   line-height: 1.8;
 }
